# janus

./: CMakeLists.txt
include/: ChangeDetectionWidget.h  HistogramWidget.h  MinecraftCommanderWidget.h  MinecraftObserverWidget.h
src/: ChangeDetectionWidget.cpp  HistogramWidget.cpp  MinecraftCommanderWidget.cpp  MinecraftCommanderWidget.ui  MinecraftObserverWidget.cpp  main.cpp
